Work on assignment.

--- a/symmetric_fxns/sym6.tex
+++ b/symmetric_fxns/sym6.tex
@@ -98,6 +98,24 @@
     \end{align*}
     so
     \begin{align*}
+      J
+      &=
+      \begin{pmatrix}
+        \delta_{(4)', (4)} & \delta_{(4)', (3,1)} & \delta_{(4)', (2,2)} & \delta_{(4)', (2,1,1)} & \delta_{(4)', (1^4)}  \\
+        \delta_{(3,1)', (4)} & \delta_{(3,1)', (3,1)} & \delta_{(3,1)', (2,2)} & \delta_{(3,1)', (2,1,1)} & \delta_{(3,1)', (1^4)}  \\
+        \delta_{(2,2)', (4)} & \delta_{(2,2)', (3,1)} & \delta_{(2,2)', (2,2)} & \delta_{(2,2)', (2,1,1)} & \delta_{(2,2)', (1^4)}  \\
+        \delta_{(2,1,1)', (4)} & \delta_{(2,1,1)', (3,1)} & \delta_{(2,1,1)', (2,2)} & \delta_{(2,1,1)', (2,1,1)} & \delta_{(2,1,1)', (1^4)}  \\
+        \delta_{(1^4)', (4)} & \delta_{(1^4)', (3,1)} & \delta_{(1^4)', (2,2)} & \delta_{(1^4)', (2,1,1)} & \delta_{(1^4)', (1^4)}  \\
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        \delta_{(1^4), (4)} & \delta_{(1^4), (3,1)} & \delta_{(1^4), (2,2)} & \delta_{(1^4), (2,1,1)} & \delta_{(1^4), (1^4)}  \\
+        \delta_{(2,1,1), (4)} & \delta_{(2,1,1), (3,1)} & \delta_{(2,1,1), (2,2)} & \delta_{(2,1,1), (2,1,1)} & \delta_{(2,1,1), (1^4)}  \\
+        \delta_{(2,2), (4)} & \delta_{(2,2), (3,1)} & \delta_{(2,2), (2,2)} & \delta_{(2,2), (2,1,1)} & \delta_{(2,2), (1^4)}  \\
+        \delta_{(3,1), (4)} & \delta_{(3,1), (3,1)} & \delta_{(3,1), (2,2)} & \delta_{(3,1), (2,1,1)} & \delta_{(3,1), (1^4)}  \\
+        \delta_{(4), (4)} & \delta_{(4), (3,1)} & \delta_{(4), (2,2)} & \delta_{(4), (2,1,1)} & \delta_{(4), (1^4)}  \\
+      \end{pmatrix} \\
+      &=
       \begin{pmatrix}
         0 & 0 & 0 & 0 & 1 \\
         0 & 0 & 0 & 1 & 0 \\
@@ -343,7 +361,7 @@
         \end{ytableau}.
       \end{align*}
 
-      $L_{\lambda, (2,1,1)} = 3 $:
+      $L_{\lambda, (2,1,1)} = 2 $:
       \begin{align*}
         \begin{ytableau}
           1 & 1 \\
@@ -356,7 +374,7 @@
           2
         \end{ytableau} \quad .
       \end{align*}
-      The third row is $(1,2,2,3,0)$.
+      The fourth row is $(1,2,2,2,0)$.
     \item
       $\lambda(1^4)$:
 
@@ -671,7 +689,7 @@
         1 & 0 & 0 & 0 & 0 \\
         1 & 1 & 0 & 0 & 0 \\
         1 & 0 & 2 & 0 & 0 \\
-        1 & 2 & 2 & 3 & 0 \\
+        1 & 2 & 2 & 2 & 0 \\
         1 & 4 & 6 & 12 & 24
       \end{pmatrix}
     \end{align*}
@@ -730,6 +748,159 @@
         0 & 0 & 0 & 0 & 24
       \end{pmatrix}
     \end{align*}
+  \item
+    \begin{align*}
+      M(h,f) &= 
+      K^TJK \\
+      &=
+      \begin{pmatrix}
+        1 & 0 & 0 & 0 & 0 \\
+        1 & 1 & 0 & 0 & 0 \\
+        1 & 1 & 1 & 0 & 0 \\
+        1 & 2 & 1 & 1 & 0 \\
+        1 & 3 & 2 & 3 & 1 
+      \end{pmatrix}
+      \begin{pmatrix}
+        0 & 0 & 0 & 0 & 1 \\
+        0 & 0 & 0 & 1 & 0 \\
+        0 & 0 & 1 & 0 & 0 \\
+        0 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 0 & 0 & 0
+      \end{pmatrix}
+      \begin{pmatrix}
+        1 & 1 & 1 & 1 & 1 \\
+        0 & 1 & 1 & 2 & 3 \\
+        0 & 0 & 1 & 1 & 2 \\
+        0 & 0 & 0 & 1 & 3 \\
+        0 & 0 & 0 & 0 & 1 
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        0 & 0 & 0 & 0 & 1 \\
+        0 & 0 & 0 & 1 & 4 \\
+        0 & 0 & 1 & 2 & 6 \\
+        0 & 1 & 2 & 5 & 12 \\
+        1 & 4 & 6 & 12 & 24
+      \end{pmatrix}
+    \end{align*}
+
+    \begin{align*}
+      M(s,e) &= 
+      JK^{-T} \\
+      &=
+      \begin{pmatrix}
+        0 & 0 & 0 & 0 & 1 \\
+        0 & 0 & 0 & 1 & 0 \\
+        0 & 0 & 1 & 0 & 0 \\
+        0 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 0 & 0 & 0
+      \end{pmatrix}
+      \begin{pmatrix}
+        1 & 1 & 1 & 1 & 1 \\
+        0 & 1 & 1 & 2 & 3 \\
+        0 & 0 & 1 & 1 & 2 \\
+        0 & 0 & 0 & 1 & 3 \\
+        0 & 0 & 0 & 0 & 1 
+      \end{pmatrix}^{-T} \\
+      &=
+      \begin{pmatrix}
+        0 & 0 & 0 & 0 & 1 \\
+        0 & 0 & 0 & 1 & 0 \\
+        0 & 0 & 1 & 0 & 0 \\
+        0 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 0 & 0 & 0
+      \end{pmatrix}
+      \begin{pmatrix}
+        1 & 0 & 0 & 0 & 0 \\
+        -1 & 1 & 0 & 0 & 0 \\
+        0 & -1 & 1 & 0 & 0 \\
+        1 & -1 & -1 & 1 & 0 \\
+        -1 & 2 & 1 & -3 & 1 
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        -1 &  2 &  1 & -3  & 1 \\
+         1 & -1 & -1 &  1  & 0 \\
+         0 & -1 &  1 &  0  & 0 \\
+        -1 &  1 &  0 &  0  & 0 \\
+         1 &  0 &  0 &  0  & 0 \\
+      \end{pmatrix}
+    \end{align*}
+
+    \begin{align*}
+      M(p,f)
+      &= 
+      \epsilon L \\
+      &=
+      \begin{pmatrix}
+        -1 & 0 & 0 & 0 & 0 \\
+        0 & 1 & 0 & 0 & 0 \\
+        0 & 0 & 1 & 0 & 0 \\
+        0 & 0 & 0 & -1 & 0 \\
+        0 & 0 & 0 & 0 & 1
+      \end{pmatrix} 
+      \begin{pmatrix}
+        1 & 0 & 0 & 0 & 0 \\
+        1 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 2 & 0 & 0 \\
+        1 & 2 & 2 & 2 & 0 \\
+        1 & 4 & 6 & 12 & 24
+      \end{pmatrix}
+      \\
+      &=
+      \begin{pmatrix}
+        -1 & 0 &  0 &  0 &  0 \\
+        1  & 1  & 0  & 0  & 0 \\
+        1  & 0  & 2  & 0  & 0 \\
+        1  &-2  &-2  &-2  & 0 \\
+        1  & 4  & 6  &12  &24 \\
+      \end{pmatrix}
+    \end{align*}
+
+    \begin{align*}
+      M(p,h)
+      &=
+      zL^{-T} \\
+      &=
+      \begin{pmatrix}
+        4 & 0 & 0 & 0 & 0 \\
+        0 & 3 & 0 & 0 & 0 \\
+        0 & 0 & 8 & 0 & 0 \\
+        0 & 0 & 0 & 4 & 0 \\
+        0 & 0 & 0 & 0 & 24
+      \end{pmatrix}
+      \begin{pmatrix}
+        1 & 0 & 0 & 0 & 0 \\
+        1 & 1 & 0 & 0 & 0 \\
+        1 & 0 & 2 & 0 & 0 \\
+        1 & 2 & 2 & 2 & 0 \\
+        1 & 4 & 6 & 12 & 24
+      \end{pmatrix}^{-T} \\
+      &=
+      \begin{pmatrix}
+        4 & 0 & 0 & 0 & 0 \\
+        0 & 3 & 0 & 0 & 0 \\
+        0 & 0 & 8 & 0 & 0 \\
+        0 & 0 & 0 & 4 & 0 \\
+        0 & 0 & 0 & 0 & 24
+      \end{pmatrix}      
+      \begin{pmatrix}
+        1 & -1 & -1/2 &    1 & -1/4 \\
+        0 &  1 &    0 &   -1 &  1/3 \\
+        0 &  0 &  1/2 & -1/2 &  1/8 \\
+        0 &  0 &    0 &  1/2 & -1/4 \\
+        0 &  0 &    0 &    0 & 1/24 
+      \end{pmatrix} \\
+      &=
+      \begin{pmatrix}
+        4 & -4 & -2 & 4 & -1 \\
+        0 &  3 &  0 & 3 &  1 \\
+        0 &  0 &  4 & 4 &  1 \\
+        0 &  0 &  0 & 2 & -1 \\
+        0 &  0 &  0 & 0 &  1 
+      \end{pmatrix}
+    \end{align*}
+    
   \end{enumerate}
 \end{proof}
 \end{document}
