--- a/symmetric_fxns/sym8.tex
+++ b/symmetric_fxns/sym8.tex
@@ -108,4 +108,11 @@
 \begin{exercise}
   Use the Murnaghan-Nakayama rule to write the power sum $p_r$, $r \geq 1$, as a linear combination of Schur functions.
 \end{exercise}
+\begin{proof}
+  Setting $\lambda= \emptyset$ in Proposition 3.7.1 of the course notes yields
+  \begin{align*}
+    p_r  = \sum\limits_{\mu}(-1)^{ht(\mu)} s_\mu,
+  \end{align*}
+  where the sum is over all border strip partitions $\mu \in Par$ with $r$ boxes.
+\end{proof}
 \end{document}
