Write out second question.

--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -119,4 +119,15 @@
   We've shown that for all symmetric functions $f \in Sym$, we have \omega(f^{\pm}) = \omega(f)^{\pm}$. 
 \end{proof}
 
+\begin{exercise}
+  Suppose that
+  \begin{align*}
+    f = \sum\limits_{\lambda \in Par} c_\lambda p_\lambda,
+  \end{align*}
+  for some $c_\lambda \in \Q$, $\lambda \in Par$, only finitely many of which are non zero. Choose $\lambda$ of maximal size amongst partitions such that $c_\lambda \neq 0$. Show that
+  \begin{align*}
+    p_\lambda^-f \stackrel{\text{4.13}}{=} (\prod\limits_{i=1}^{\ell(\lambda)} \lambda_i \cfrac{\partial}{\partial p_{\lambda_i}}) f
+  \end{align*}
+  is a nonzero constant polynomial.
+\end{exercise}
 \end{document}
