--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -137,7 +137,7 @@
   \begin{align*}
     \cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0.
   \end{align*}
-  By our choice of $\lambda$ we have that for $\lambda \subsetneq \mu$, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$, or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part and 
+  If $\lambda \subsetneq \mu$, then by our choice of $\lambda$ as maximal, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$, or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part. In either case, the result is that
   \begin{align*}
     \prod\limits_{i=1}^{\ell(\lambda)}\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0.
   \end{align*}
