--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -133,14 +133,12 @@
   is a nonzero constant polynomial.
 \end{exercise}
 \begin{proof}
-  Let $\lambda \in Par$ be maximal (under partition inclusion $\subseteq$) such that $c_\lambda \neq 0$, and let $\mu \in Par$. If $\lambda$ and $\mu$ are not comparable under partition inclusion, then there's some $\lambda_i$ that does not appear as a part in $\mu$, and so 
+  Let $\lambda \in Par$ be maximal (under partition inclusion $\subseteq$) such that $c_\lambda \neq 0$, and let $\mu \in Par$. If $\lambda$ and $\mu$ are not comparable under partition inclusion, then there's some $\lambda_i$ that does not appear as a part in $\mu$, and 
   \begin{align*}
     \cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0.
   \end{align*}
-  Otherwise, $\lambda, \mu$ are comparable. If $\lambda \subsetneq \mu$, then by our choice of $\lambda$, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$, or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part $\lambda_j$, and $(\cfrac{\partial}{\partial \lambda_j})^{m_{\lambda_j}(\lambda)}(p_\mu) = 0$. In either case, the result is that
-  \begin{align*}
-    \prod\limits_{i=1}^{\ell(\lambda)}\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0.
-  \end{align*}
+  Otherwise, $\lambda, \mu$ are comparable. If $\lambda \subsetneq \mu$, then by our choice of $\lambda$, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$, or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part $\lambda_j$, and $(\cfrac{\partial}{\partial \lambda_j})^{m_{\lambda_j}(\lambda)}(p_\mu) = 0$. 
+  
   We use all of these facts in the following:
   \end{align*}
   \begin{align*}
