--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -137,7 +137,7 @@
   \begin{align*}
     \cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0.
   \end{align*}
-  Otherwise, $\lambda, \mu$ are comparable. If $\lambda \subsetneq \mu$, then by our choice of $\lambda$, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$, or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part $\lambda_j$, and $(\cfrac{\partial}{\partial \lambda_j})^{m_{\lambda_j}(\lambda)}(p_\mu) = 0$. 
+  Otherwise, $\lambda, \mu$ are comparable. If $\lambda \subsetneq \mu$, then by our choice of $\lambda$, $c_\mu = 0$. If $\mu \subsetneq \lambda$, we have either $\lambda$ has a distinct part $\lambda_i$, and $\cfrac{\partial}{\partial p_{\lambda_i}}p_\mu = 0$; or $\lambda$ and $\mu$ have the same parts, but $\lambda$ has a greater multiplicity of at least one part $\lambda_j$, and $(\cfrac{\partial}{\partial \lambda_j})^{m_{\lambda_j}(\lambda)}(p_\mu) = 0$. 
   
   We use all of these facts in the following:
   \end{align*}
