--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -152,8 +152,9 @@
     &=
     c_\lambda\prod\limits_{i=1}^{\ell(\lambda)} \lambda_i \cfrac{\partial}{\partial p_{\lambda_i}}p_\lambda \\
     &=
-    c_\lambda\prod\limits_{i=1}^{\ell(\lambda)} \lambda_i m_{\lambda_i}(\lambda) \in \Q .\\
+    c_\lambda\prod\limits_{\lambda_i} \lambda_i^{m_{\lambda_i}(\lambda)} m_{\lambda_i}(\lambda)! \in \Q,\\
   \end{align*}
+  where the last product is over distinct parts (so is finite).
   
 \end{proof}
 \end{document}
