--- a/symmetric_fxns/sym9.tex
+++ b/symmetric_fxns/sym9.tex
@@ -154,7 +154,7 @@
     &=
     c_\lambda\prod\limits_{\lambda_i} \lambda_i^{m_{\lambda_i}(\lambda)} m_{\lambda_i}(\lambda)! \in \Q,\\
   \end{align*}
-  where the last product is over distinct parts (so is finite).
+  where the last product is over distinct parts $\lambda_i$ of $\lambda$.
   
 \end{proof}
 \end{document}
