--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -62,7 +62,7 @@
 
 \title{ Math 4995/5327
   \\
-  Assignment 10}
+  Final Exam}
 \author{David Draguta}
 
 \begin{document}
@@ -131,7 +131,7 @@
 \begin{exercise}
   Suppose $(C, \triangle, \epsilon)$ is a counital coassociative coalgebra over a field $k$. Show that the dual space $C^* = Hom_k(C,k)$ is a unital associative algebra with multiplication
   \begin{align*}
-    \nabla: C^* \otimes C^* \to C^*, \quad \nabla(f \otimes g)(x) = (f \otimes g) \circ \triangle(x), \quad f,g \in C^*, x \in C,
+    \nabla: C^* \otimes C^* \to C^*, \quad \nabla(f \otimes g)(x) = (f \otimes g) \circ \triangle(x), \quad f, g \in C^*, \quad x \in C,
   \end{align*}
   extended by linearity, and a unit
   \begin{align*}
