First part of first question.

--- a/symmetric_fxns/sym10.tex
+++ b/symmetric_fxns/sym10.tex
@@ -59,7 +59,6 @@
   }}
 \setlength{\columnseprule}{1 pt}
 
-
 \title{ Math 4995/5327
   \\
   Assignment 10}
@@ -82,7 +81,7 @@
   \end{align*}
 \end{exercise}
 \begin{proof}
-  Fix some $\mathbf{i} = (i_0, i_1, \dots)$, for $i_j \in \Z, j \geq 0$ and $i_k \neq i_l$ if $k \neq l$. There are infinitely many terms in $\mathbf{i}$, and so  
+  Let $v_{\mathbf{i}}$ be a semi infinite wedge. Then
   \begin{align*}
     \sum\limits_{j \in \Z} \psi_{j +r}^+\psi_{j+r}^- v_{\mathbf{i}}
     &=
