Finish first question.

--- a/symmetric_fxns/final.tex
+++ b/symmetric_fxns/final.tex
@@ -104,6 +104,8 @@
   such choices, i.e. that many tableaux.
 
   Next, we argue by induction:
+  
+  Let $0 \leq k \leq n$, then 
   \begin{align*}
     h_k(x_1, \dots, x_n)
     &= h_k(x_1, \dots, x_{n-1}) + x_n h_{k-1}(x_1, \dots, x_n),
